@@ -9,7 +9,7 @@
         <import addon="script.module.requests" version="2.18.0" />
         <import addon="inputstream.adaptive" version="2.0.19" />
         <import addon="plugin.video.youtube" version="6.0.0" optional="true" />
-        <import addon="script.module.inputstreamhelper" version="0.3.3" />
+        <import addon="script.module.inputstreamhelper" version="0.3.5" />
     </requires>
 
     <extension  point="xbmc.python.pluginsource"
