@@ -8,10 +8,11 @@
 * Fixed: video items always showed channel settings even if a channel has no settings
 * Fixed: some more information when logging on to a channel fails
 * Updated: use 3 digit version number for channelpacks
+* Added: Breadcrumbs for current listing
+* Added: Install Widevine using the InputStream Helper for streams that require it
 
 [B]GUI/Settings/Language related[/B]
 * Merged: Language corrections and additions for Swedish language (from Snaah/retrospect-snah)
-* Added: Breadcrumbs for current listing
 
 [B]Channel related[/B]
 * Added: if no username was configured, log this as a warning (See #1187)
